fixed overflow bug on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -228,10 +228,6 @@ main.portfolio {
   color: #b1cbbb;
 }
 
-main.entry{
-
-}
-
 .entry span {
   margin-bottom: 2rem;
   display: flex;
